@@ -31,6 +31,7 @@ ufw (0.30) UNRELEASED; urgency=low
   * decode("utf-8") some strings in 'status' to correct formatting errors with
     with multibyte characters
   * add more reports
+  * add delete by rule number (LP: #367571)
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 01 Feb 2010 23:13:55 -0800
 
